@@ -1,4 +1,12 @@
 
+                CHANGES IN party VERSION 0.9-999 (2009-09-16)
+
+    o    minbucket was erronously interpreted as minbucket + 1
+
+    o    p-values for teststat = "max" were wrong
+         in the uncommon case of zero variances
+
+
                 CHANGES IN party VERSION 0.9-998 (2009-06-17)
 
     o    mtry may vary with tree depth
